Refactor: Split Command Class into two classes