@@ -11,10 +11,22 @@ repositories {
     mavenCentral()
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
+tasks.withType(Test) {
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
+}
+
+
 dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.mockito:mockito-core:5.6.0'
 }
 
 application {
